--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -105,6 +105,7 @@ a span{
   font-size:2.0vh!important;
   /* padding-left: 10vh; */
   padding-right: 10vh;
+  margin-bottom: 20vh;
 }
 
 #bow{
@@ -113,14 +114,99 @@ a span{
 
 #type{
   color:red!important;
+  font-size:2.5vh!important;
+}
+
+.type2{
+  font-size:2.5vh!important;
 }
 #i0{
   width:200vh;
   /* position: absolute;*/
-  margin-top: -20vh;
+  margin-top: -55vh;
 }
 
 .typing{
   font-family: 'Montserrat', sans-serif;
   font-size:2.0vh!important;
 }
+
+.clientHead{
+  font-size: 5vh;
+  font-family: 'Days One', sans-serif !important;
+  text-align: center;
+}
+
+.clt0{
+  padding:3vh;
+}
+.partners{
+  height:14vh;
+}
+
+.pagefooter{
+  background-color: black;
+  font-family: 'Montserrat', sans-serif;
+  font-size:2.0vh!important;
+  color: white;
+  padding:4vh;
+
+}
+.copyright{
+  margin-top: 10vh;
+}
+
+
+/* carousel 3d */
+/* .carousel-3d{
+  position: relative;
+  width: 20px;
+  height: 20px;
+  background-color: #2d4aff;
+  margin: 200px auto;
+
+  .carousel-item{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 300px;
+    height: 200px;
+    margin-left: -150px;
+    margin-top: -100px;
+    background-size: cover;
+  }
+
+  .carousel-item:nth-child(1){
+      background-image: url(http://news.cctvnews.cn/news/3d457a4d3149544d/img/73233fb6-0afe-41d7-900d-ae3e2d088313.jpg);
+    }
+
+  .carousel-item:nth-child(2){}
+      background-image: url(http://news.cctvnews.cn/news/3d55444e3249544d/img/ea65c16b-1a90-47ba-9997-46ddf0a7a32f.jpg);
+    }
+
+  .carousel-item:nth-child(3){
+      background-image:url(http://news.cctvnews.cn/news/3d55444e3249544d/img/c91d9953-7b36-4da4-9174-7574b8239e2c.jpg);
+    }
+
+  .carousel-item:nth-child(4){
+      background-image:url(http://news.cctvnews.cn/news/3d676a4d7949544d/img/b0c3e3c3-0161-4f15-bcd4-4380a3ca0bd2.jpg);
+    }
+
+*/
+/* #waterwheel-carousel {
+  width:1200px;
+  height:650px;
+  position:relative;
+  clear:both;
+  overflow:hidden;
+  margin:0 auto;
+}
+#waterwheel-carousel img {
+  visibility:hidden; 
+  cursor:pointer;
+}
+
+.carouselimg{
+  width:400px;
+  height:600px;
+} */
