--- a/public/stylesheet/styleProj.css
+++ b/public/stylesheet/styleProj.css
@@ -6,6 +6,7 @@ body{
   background-color: rgba(0,0,0,0.7) !important;
   color:white!important;
   font-family: 'Montserrat', sans-serif;
+  margin-bottom: 15vh!important;
 }
 a{
   color:#FFFFFF!important;
@@ -13,8 +14,82 @@ a{
 a span{
   color:#FFFFFF !important;
 }
+/* --------------------------- */
+:root {
+    font-family: "Roboto", sans-serif;
+    /* background-color: #ededed; */
+}
+.card:hover{
+  cursor: pointer;
+}
+.content{
+  margin-top: 10vh!important;
+}
+.card {
 
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.12), 0 1px 5px rgba(0, 0, 0, 0.20);
+    border-radius: 2px;
+    background-color: #fefefe;
+    height: 80px;
+    /* max-width: 500px; */
+    overflow: hidden;
+    transition: 375ms cubic-bezier(0.4, 0.0, 0.2, 1);
+    width: 100vh!important;
+    /* to position in middle */
+    margin: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-top: 2vh!important;
+}
 
+.cardActive {
+    height: 232px;
+}
+
+.cardActive .nonSharedContent {
+    /* When closing, wait 75ms before fading and fade for longer */
+    transition: 150ms;
+    transition-delay: 75ms;
+    opacity: 1;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 2.0vh!important;
+}
+
+.nonSharedContent {
+    transition: 75ms;
+    opacity: 0;
+}
+
+.cardHeader {
+    cursor: pointer;
+    width: 100%;
+    height: 72px;
+    padding-top: 16px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+.card-header:hover{
+  background-color: #dbe0ff!important;
+}
+.title{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3vh;
+}
+.head0{
+  font-family: 'Days One', sans-serif !important;
+}
+.projHead{
+  margin-top: vh!important;
+  font-size: 5vh;
+    font-family: 'Days One', sans-serif !important;
+}
+.imgPCB{
+  margin-top: 15vh;
+}
+/* ----------------------- */
 .pagefooter{
   background-color: black;
   font-family: 'Montserrat', sans-serif;
