--- a/public/stylesheet/news.css
+++ b/public/stylesheet/news.css
@@ -77,10 +77,25 @@ a span{
   justify-content: space-between;
   padding: 1rem 2rem;
 }
-
+.mainTitle{
+  font-size: 5vh!important;
+  font-family: 'Days One', sans-serif !important;
+  text-shadow: 5px 5px 5px black!important;
+}
 .post-title {
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.3;
+}
+.text:hover{
+  color: black;
+  text-shadow: 1px 1px 1px grey!important;
+  transition: 1s;
+  cursor: pointer;
+}
+.post-image:hover{
+  transform: scale(1.2)!important;
+  transition: 4s!important;
 }
 
 .post-meta {
