--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 #navbar{
-  background-color: rgba(0,0,0,0.7) !important;
+  background-color: rgba(0,0,0,1) !important;
   color:white!important;
   font-family: 'Montserrat', sans-serif;
 }
@@ -49,7 +49,8 @@ a span{
 .info{
   /* padding:5vh; */
   padding-top: 12vh;
-  background-image:url("../images/bg.jpg")!important;
+  background-image: url('/home/abhirupa/Documents/Folder E/Github/EDS_India/public/images/bg.jpg');
+  /* background-color: #020202!important; */
   font-family: 'Montserrat', sans-serif;
   font-size:2.0vh!important;
   background-attachment: fixed;
@@ -116,14 +117,15 @@ a span{
 .wwdHead{
   font-size: 5vh;
   font-family: 'Days One', sans-serif !important;
+  color: white;
   text-align: center;
 }
 .card:hover{
   /* font-size: 2.1vh; */
   cursor: pointer;
-  -moz-box-shadow:    30px 30px 30px #bab9b8;
+  /* -moz-box-shadow:    30px 30px 30px #bab9b8;
   -webkit-box-shadow:  30px 30px 30px #bab9b8;
-  box-shadow:          30px 30px 30px #bab9b8;
+  box-shadow:          30px 30px 30px #bab9b8; */
   transform: scale(1.2);
   transition: 0.5s;
 
@@ -138,14 +140,16 @@ a span{
 }
 .cont2a{
   margin-top: 10vh;
+  color: white;
   font-family: 'Days One', sans-serif !important;
   font-size: 8vh!important;
 }
 .cont2b{
   font-size: 3vh;
+  color: white;
 }
 .cont2c{
-
+color: white;
   margin-top: 18vh;
   font-size: 5vh;
     font-family: 'Days One', sans-serif !important;
@@ -153,6 +157,7 @@ a span{
 }
 .cont2d{
   font-family: 'Montserrat', sans-serif;
+  color: white;
   font-size:2.0vh!important;
   /* padding-left: 10vh; */
   padding-right: 10vh;
@@ -178,11 +183,14 @@ a span{
   font-size:2.0vh!important;
 }
 #about{
+  padding-top:45vh;
+  color: white;
   font-size: 5vh;
   font-family: 'Days One', sans-serif !important;
   text-align: center;
 }
 .about_content{
+  color: white;
   margin-top: 5vh;
   /* padding-right: 5vh; */
   font-family: 'Montserrat', sans-serif;
@@ -190,11 +198,14 @@ a span{
 }
 .clientHead{
   font-size: 5vh;
+  color: white;
   font-family: 'Days One', sans-serif !important;
   text-align: center;
   margin-top: 15vh;
 }
-
+.typing{
+  color: white;
+}
 .clt0{
   padding:3vh;
 }
@@ -289,7 +300,9 @@ a span{
 }
 
 .section2{
-  background-image:url("../images/bg2.jpg")!important;
+  margin-top:-55vh;
+  padding-bottom: 10vh;
+  background-color:#020202!important;
   /* background-attachment: fixed; */
 }
 .partners{
