--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -197,6 +197,7 @@ color: white;
   font-size:2.0vh!important;
 }
 .clientHead{
+  padding-top:45vh;
   font-size: 5vh;
   color: white;
   font-family: 'Days One', sans-serif !important;
@@ -225,82 +226,10 @@ color: white;
   margin-top: 10vh;
 }
 
-/* flip card--------------------- */
-.contCard {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items:center;
-}
 
-
-.imageCard{
-	margin: 10% 5%;
-	border-radius: 50%;
-	border: 4px solid silver;
-}
-.inner-container {
-  perspective: 900px;
-  padding: 0 10%;
-}
-.main {
-  width:300px;
-  height:300px;
-  position:relative;
-  margin: 50px auto;
-  transition:all .5s ease-in-out;
-  transform-style:preserve-3d;
-}
-.main:hover {
-  transform: rotateY(180deg);
-  box-shadow: 20px 20px 20px #d4d6d8;
-}
-.main div {
-  position: absolute;
-  top: 5%;
-  left:0;
-  width: 100%;
-  height:100%;
-  /* font-size: 30px;*/
-
-  /* border-radius: 25px; */
-}
-.name{
-  font-family: 'Montserrat', sans-serif;
-  font-size:2.3vh!important;
-  padding:10px;
-}
-.bio{
-  font-family: 'Montserrat', sans-serif;
-  font-size:2.0vh!important;
-  padding:10px;
-  text-align: left;
-}
-.front {
-  z-index:2;
-  text-align:center;
-  line-height:300px;
-  color: silver;
-  background-color: white;
-  backface-visibility: hidden;
-  border-style: solid;
-  border-width: 0.5px;
-  box-shadow: 10px 10px 10px #d4d6d8;
-  /* box-shadow: 0px -2px 0px 0px 	rgba(150, 252, 253, 1.0), 2px 8px 25px -10px rgba(0,0,0,0.75); */
-}
-.back {
-  z-index:1;
-  border-style: solid;
-  border-width: 0.5px;
-
-  background-color: white;
-  transform: rotateY(180deg);
-  backface-visibility: visible;
-  /* box-shadow: 0px -2px 0px 0px rgba(211, 150, 253, 1.0), 2px 8px 25px -10px rgba(0,0,0,0.75); */
-}
 
 .section2{
-  margin-top:-55vh;
+  margin-top:-75vh;
   padding-bottom: 10vh;
   background-color:#020202!important;
   /* background-attachment: fixed; */
