--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -211,9 +211,9 @@ color: white;
   font-size:2.0vh!important;
 }
 .clientHead{
-  padding-top:45vh;
+  padding-top:0vh;
   font-size: 5vh;
-  color: white;
+  color: black;
   font-family: 'Days One', sans-serif !important;
   text-align: center;
   margin-top: 15vh;
@@ -242,11 +242,16 @@ color: white;
 
 
 
+
 .section2{
-  margin-top:-75vh;
+  margin-top:0;
   padding-bottom: 10vh;
-  background-color:#020202!important;
+  background-color:#000!important;
   /* background-attachment: fixed; */
+}
+
+.clients{
+  background-color: white!important;
 }
 .partners{
   padding-right: 10vh!important;
