--- a/public/stylesheet/news.css
+++ b/public/stylesheet/news.css
@@ -8,7 +8,8 @@
 }
 
 body {
-  background: #191919!important;
+  color: white!important
+  background: #FFFFFF!important;
   /* padding: 40px 20p  ; */
   overflow-x: hidden !important;
 }
@@ -28,270 +29,6 @@ a span{
 }
 /* ---------------------------------- */
 
-
-.level {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.level-left,
-.level-right {
-  display: flex;
-  align-items: center;
-}
-.post-body{
-  background-color: rgba(0,0,0,0.5);
-}
-.level-right {
-  text-align: right;
-}
-.postCont{
-  /* background-color: black; */
-  padding: 0!important;
-}
-.posts .container-wide {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.post {
-  position: relative;
-  overflow: hidden;
-  flex: 0 0 50%;
-  width: 50%;
-  height: 50vh;
-  min-height: 460px;
-}
-
-.post-action {
-  display: none;
-}
-
-.post-image {
-  background-color: #ccc;
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100%;
-}
-
-.post-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem 2rem;
-}
-.mainTitle{
-  font-size: 5vh!important;
-  font-family: 'Days One', sans-serif !important;
-  text-shadow: 5px 5px 5px black!important;
-}
-.post-title {
-  margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  line-height: 1.3;
-}
-.text:hover{
-  color: black;
-  text-shadow: 1px 1px 1px grey!important;
-  transition: 1s;
-  cursor: pointer;
-}
-.post-image:hover{
-  transform: scale(1.2)!important;
-  transition: 4s!important;
-}
-
-.dropdown:hover{
-  cursor: pointer!important;
-}
-.dropdown-item:hover{
-  background-color: grey!important;
-}
-
-
-.dropdown-menu{
-  background-color: black!important;
-  color: black!important;
-}
-.post-meta {
-  font-size: 10px;
-  color: #222;
-}
-.post-meta a {
-  color: #222;
-  text-decoration: none;
-}
-.post-meta .is-small {
-  font-size: 12px;
-  vertical-align: text-top;
-  color: #bbb;
-}
-
-.post-category {
-  font-size: 11px;
-  text-transform: uppercase;
-  border-bottom: 1px solid #00bcd4;
-}
-.post-category:hover {
-  border-bottom: 1px solid #008fa1;
-}
-
-.post-url {
-  text-transform: uppercase;
-}
-
-.post-date {
-  margin-left: 0.4rem;
-}
-
-.post-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-}
-
-.post-body {
-  position: relative;
-  z-index: 2;
-}
-
-.post.is-full .post-body {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  color: #fff;
-}
-.post.is-full .post-body .post-title {
-  font-size: 42px;
-  line-height: 1.2;
-  margin-bottom: 2rem;
-}
-.post.is-full .post-body .post-meta {
-  color: #fff;
-}
-.post.is-full .post-body .post-meta a {
-  color: #fff;
-}
-
-.post.is-half .post-body {
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  background-color: #fff;
-  box-shadow: 8px 0 40px rgba(0, 0, 0, 0.25);
-}
-.post.is-half .post-body.is-to-right {
-  box-shadow: -8px 0 40px rgba(0, 0, 0, 0.25);
-  left: 50%;
-}
-.post.is-half .post-body.is-to-right:after {
-  right: auto;
-  left: -6px;
-  border-width: 6px 6px 6px 0;
-}
-.post.is-half .post-body:after {
-  content: "";
-  position: absolute;
-  display: block;
-  top: 50%;
-  right: -6px;
-  border: 6px solid #fff;
-  border-color: transparent #fff;
-  border-width: 6px 0 6px 6px;
-}
-.post.is-half .post-title {
-  height: 80%;
-  padding: 0 1.6rem;
-  font-size: 22px;
-  font-weight: 700;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media screen and (max-width: 1040px) {
-  .post {
-    flex: 0 0 auto;
-    width: 100%;
-    min-height: auto;
-  }
-  .post:first-of-type {
-    min-height: 70vh;
-  }
-}
-@media screen and (max-width: 560px) {
-  .post:first-of-type {
-    min-height: 60vh;
-  }
-  .post.is-full .post-body .post-title {
-    font-size: 28px;
-    line-height: 1.1;
-  }
-  .post.is-half {
-    height: auto;
-    min-height: 180px;
-    border-bottom: 1px solid #ddd;
-  }
-  .post.is-half .post-image {
-    top: 0;
-    left: 0;
-    right: auto;
-    bottom: auto;
-    width: 92px;
-    height: 120px;
-    border-radius: 0 0 6px 0;
-    box-shadow: inset -4px -4px 20px rgba(0, 0, 0, 0.2);
-    z-index: 3;
-  }
-  .post.is-half .post-body {
-    padding: 1rem;
-    width: 100%;
-  }
-  .post.is-half .post-body.is-to-right {
-    left: 0;
-  }
-  .post.is-half .post-title {
-    font-size: 16px;
-    padding: 0 0 0 100px;
-    text-align: left;
-  }
-}
-.profile-panel {
-  display: none;
-  position: fixed;
-  top: 60px;
-  right: 0;
-  bottom: 0;
-  width: 400px;
-  z-index: 9;
-  background-color: #00aec5;
-  padding: 2rem;
-  text-align: center;
-}
-.profile-panel.is-open {
-  display: block;
-}
-.profile-panel .profile-avatar {
-  margin: 2rem 0 4rem;
-}
-.profile-panel .profile-avatar img {
-  width: 96px;
-  height: 96px;
-  border-radius: 50%;
-}
-.profile-panel .profile-name {
-  color: #fff;
-  font-size: 32px;
-  margin: 0;
-}
 /* ----------------------- */
 .pagefooter{
   background-color: black;
@@ -299,8 +36,53 @@ a span{
   font-size:2.0vh!important;
   color: white;
   padding:4vh;
+  /* position: absolute;  */
+  position: relative;
+  z-index: 100;
 
 }
 .copyright{
   margin-top: 10vh;
+}/* The side navigation menu */
+
+
+
+.sidenav {
+  margin-top:7vh!important;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* .sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+} */
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
