--- a/public/stylesheet/contact.css
+++ b/public/stylesheet/contact.css
@@ -49,7 +49,8 @@ a span{
   font-family: 'Montserrat', sans-serif;
   color: white;
   font-size: 2vh;
-  /* background- */
+  
+}
 
 .img{
   height: 100%!important;
